Get rid of mockito warning